--- a/bpmn/pom.xml
+++ b/bpmn/pom.xml
@@ -62,6 +62,29 @@
       <artifactId>jaxb-impl</artifactId>
       <version>2.2.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
+        
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+
+<!-- https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock -->
+    <dependency>
+         <groupId>com.github.tomakehurst</groupId>
+         <artifactId>wiremock</artifactId>
+         <version>2.24.1</version>
+         <scope>test</scope>
+    </dependency>
+    
   </dependencies>
 
   <build>
